# finances

./: Cargo.toml
src/: cli.yaml  main.rs
src/add/: assett.rs  mod.rs
