[package]
name = "finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = {}
serde_json = "1.0"
chrono = "0.4"
regex = "1"

[dependencies.clap]
version = "~3.0.0-beta.5"
default-features = true
features = ["yaml", "regex"]
